--- a/packages/form-js-viewer/assets/form-js-base.css
+++ b/packages/form-js-viewer/assets/form-js-base.css
@@ -313,14 +313,27 @@
   color: var(--color-text-lighter);
 }
 
-.fjs-container .fjs-form-field-group,
-.fjs-container .fjs-form-field-group .fjs-form-field-group .fjs-form-field-group {
+.fjs-container .fjs-form-field-group {
   padding: 5px 6px 0 6px;
-  margin: 0 -6px !important;
+  margin: 0 6px !important;
 }
 
-.fjs-container .fjs-form-field-group .fjs-form-field-group {
-  margin: 0 11px !important;
+.fjs-container .fjs-form-field-group .fjs-form-field-group .fjs-layout-column:first-child > .fjs-element > .fjs-form-field-group:not(.fjs-editor-container .fjs-form-field-group),
+.fjs-container .fjs-layout-column:first-child > .fjs-element > .fjs-form-field-group:not(.fjs-editor-container .fjs-form-field-group) {
+  margin-left: -6px !important;
+}
+
+.fjs-container .fjs-form-field-group .fjs-form-field-group .fjs-layout-column:last-child > .fjs-element > .fjs-form-field-group:not(.fjs-editor-container .fjs-form-field-group),
+.fjs-container .fjs-layout-column:last-child > .fjs-element > .fjs-form-field-group:not(.fjs-editor-container .fjs-form-field-group) {
+  margin-right: -6px !important;
+}
+
+.fjs-container .fjs-form-field-group .fjs-layout-column:first-child > .fjs-element > .fjs-form-field-group:not(.fjs-editor-container .fjs-form-field-group) {
+  margin-left: 11px !important;
+}
+
+.fjs-container .fjs-form-field-group .fjs-layout-column:last-child > .fjs-element > .fjs-form-field-group:not(.fjs-editor-container .fjs-form-field-group) {
+  margin-right: 11px !important;
 }
 
 .fjs-container .fjs-form-field-group.fjs-outlined {
